# Text Editor 44.0

 • Improve spellcheck word boundaries
 • Various build system improvements
 • Translation updates

# Text Editor 44.rc

 • Style fixes for open popover
 • Fix a small GtkTextTag name leak
 • Ensure a useful size of preferences dialog
 • Translation updates

# Text Editor 44.beta

Changes since 44.alpha

 • Translation updates
 • Help documentation updates
 • Improvements to scroll-to-zoom
 • Style scheme updates
 • Additional shortcuts added to help overlay

# Text Editor 44.alpha

This is the first release towards GNOME 44. It is intended for unstable
distributions and enthusiastic testers only.

Changes since 43.2

 • Various UI improvements across the open popover, menus, status pages,
   search and preferences.
 • Improvements to handling drafts.
 • Restrict feature set when encountering large files.
 • Translation updates
