@@ -29,13 +29,7 @@
   <translation type="gettext">org.gnome.TextEditor</translation>
 
   <releases>
-    <release version="44.0" date="2023-03-17"/>
-    <release version="43.2" date="2023-01-10"/>
-    <release version="43.1" date="2022-10-04"/>
-    <release version="43.0" date="2022-09-17"/>
-    <release version="42.2" date="2022-06-12"/>
-    <release version="42.1" date="2022-04-21"/>
-    <release version="42.0" date="2022-03-18"/>
+    <release version="45.alpha" date="2023-06-30"/>
   </releases>
 
   <kudos>
