@@ -1,3 +1,11 @@
+# Text Editor 45.alpha
+
+ • Styling improvements to match recent libadwaita changes
+ • Fixes for various settings in per-tab overrides
+ • Various Windows build system improvements
+ • Style scheme metadata fixes for light/dark mode
+ • Translation updates
+
 # Text Editor 44.0
 
  • Improve spellcheck word boundaries
